--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </nav>
     </header>
     <main>
+        <!-- Start Available treatments -->
         <section class="container">
-            <!-- Start Available treatments -->
             <h5 class="header lh-xl fw-bold mb-0">
                 Available treatments
             </h5>
@@ -154,8 +154,8 @@
             </div>
         </div>
         <!-- End Available treatments -->
+        <!-- Start Health centers -->
         <section class="container">
-            <!-- Start Health centers -->
             <h5 class="header lh-xl fw-bold mb-0">
                 Health centers
             </h5>
@@ -265,7 +265,9 @@
                     </div>
                 </div>
             </div>
-            <!-- End Health centers -->
+        </section>
+        <!-- End Health centers -->
+        <section class="container">
             <!-- Start LinkedIn -->
             <img class="linkedin img-fluid rounded-3" src="./images/linkedin.png" alt="LinkedIn">
             <!-- End LinkedIn -->
@@ -392,8 +394,8 @@
             </div>
         </div>
         <!-- End Tourist places -->
+        <!-- Start Our specialized health and tourism services -->
         <section class="container">
-            <!-- Start Our specialized health and tourism services -->
             <h5 class="header lh-xl fw-bold mb-0">
                 Our specialized health and tourism services
             </h5>
@@ -402,10 +404,10 @@
                     <circle cx="5" cy="5" r="5" fill="#0188C0" />
                 </svg>
             </div>
-            <!-- End Our specialized health and tourism services -->
         </section>
+        <!-- End Our specialized health and tourism services -->
+        <!-- Start User comments -->
         <section>
-            <!-- Start User comments -->
             <div class="container">
                 <h5 class="header lh-xl fw-bold mb-0">
                     User comments
@@ -425,10 +427,10 @@
                     </div>
                 </section>
             </div>
-            <!-- End User comments -->
         </section>
+        <!-- End User comments -->
+        <!-- Start weblog -->
         <section class="container">
-            <!-- Start weblog -->
             <h5 class="header lh-xl fw-bold mb-0">
                 weblog
             </h5>
@@ -446,110 +448,118 @@
                     <i class="bi bi-chevron-right"></i>
                 </div>
             </section>
-            <section class="row gy-4">
-                <div class="col-lg-6">
-                    <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
-                        <div class="col-sm-6 pe-sm-3">
-                            <div class="ratio ratio-16x9 h-100">
-                                <img src="./images/blog-1.png" class="img-fluid rounded-1 object-fit-cover"
-                                    alt="blog image">
-                            </div>
-                        </div>
-                        <div class="col-sm-6 d-flex flex-column justify-content-between mt-3 mt-sm-0">
-                            <h5 class="fw-bold mb-0 line-clamp-1">Why do we get depressed?</h5>
-                            <p class="mb-0 line-clamp-3">
-                                Depression is one of the most common mental disorders that affects many people
-                                temporarily...
-                            </p>
-                            <div
-                                class="pt-2 mt-2 border-top d-flex align-items-center justify-content-between text-muted">
-                                <div class="d-flex align-items-start">
-                                    <i class="bi bi-calendar4"></i>
-                                    <small class="ms-2">2022/04/02</small>
+        </section>
+        <div class="position-relative">
+            <div class="background-image-blur weblog-background"></div>
+            <div class="container">
+                <section class="row gy-4">
+                    <div class="col-lg-6">
+                        <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
+                            <div class="col-sm-6 pe-sm-3">
+                                <div class="ratio ratio-16x9 h-100">
+                                    <img src="./images/blog-1.png" class="img-fluid rounded-1 object-fit-cover"
+                                        alt="blog image">
                                 </div>
-                                <small>00:33</small>
+                            </div>
+                            <div class="col-sm-6 d-flex flex-column justify-content-between mt-3 mt-sm-0">
+                                <h5 class="fw-bold mb-0 line-clamp-1">Why do we get depressed?</h5>
+                                <p class="mb-0 line-clamp-3">
+                                    Depression is one of the most common mental disorders that affects many people
+                                    temporarily...
+                                </p>
+                                <div
+                                    class="pt-2 mt-2 border-top d-flex align-items-center justify-content-between text-muted">
+                                    <div class="d-flex align-items-start">
+                                        <i class="bi bi-calendar4"></i>
+                                        <small class="ms-2">2022/04/02</small>
+                                    </div>
+                                    <small>00:33</small>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
-                        <div class="col-sm-6 pe-sm-3">
-                            <div class="ratio ratio-16x9 h-100">
-                                <img src="./images/blog-2.png" class="img-fluid rounded-1 object-fit-cover"
-                                    alt="blog image">
-                            </div>
-                        </div>
-                        <div class="col-sm-6 d-flex flex-column justify-content-between mt-3 mt-sm-0">
-                            <h5 class="fw-bold mb-0 line-clamp-1">Hair loss in women</h5>
-                            <p class="mb-0 line-clamp-3">
-                                Hair loss in women has various causes. Sometimes women's hair loss is temporary and
-                                recovers...
-                            </p>
-                            <div
-                                class="pt-2 mt-2 border-top d-flex align-items-center justify-content-between text-muted">
-                                <div class="d-flex align-items-start">
-                                    <i class="bi bi-calendar4"></i>
-                                    <small class="ms-2">2022/06/03</small>
+                    <div class="col-lg-6">
+                        <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
+                            <div class="col-sm-6 pe-sm-3">
+                                <div class="ratio ratio-16x9 h-100">
+                                    <img src="./images/blog-2.png" class="img-fluid rounded-1 object-fit-cover"
+                                        alt="blog image">
                                 </div>
-                                <small>17:23</small>
+                            </div>
+                            <div class="col-sm-6 d-flex flex-column justify-content-between mt-3 mt-sm-0">
+                                <h5 class="fw-bold mb-0 line-clamp-1">Hair loss in women</h5>
+                                <p class="mb-0 line-clamp-3">
+                                    Hair loss in women has various causes. Sometimes women's hair loss is temporary and
+                                    recovers...
+                                </p>
+                                <div
+                                    class="pt-2 mt-2 border-top d-flex align-items-center justify-content-between text-muted">
+                                    <div class="d-flex align-items-start">
+                                        <i class="bi bi-calendar4"></i>
+                                        <small class="ms-2">2022/06/03</small>
+                                    </div>
+                                    <small>17:23</small>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
-                        <div class="col-sm-6 pe-sm-3">
-                            <div class="ratio ratio-16x9 h-100">
-                                <img src="./images/blog-3.png" class="img-fluid rounded-1 object-fit-cover"
-                                    alt="blog image">
-                            </div>
-                        </div>
-                        <div class="col-sm-6 d-flex flex-column justify-content-between mt-3 mt-sm-0">
-                            <h5 class="fw-bold mb-0 line-clamp-1">The best way to treat arthritis</h5>
-                            <p class="mb-0 line-clamp-3">
-                                Knee arthritis is a common complication that can happen at any age; But its
-                                prevalence...
-                            </p>
-                            <div
-                                class="pt-2 mt-2 border-top d-flex align-items-center justify-content-between text-muted">
-                                <div class="d-flex align-items-start">
-                                    <i class="bi bi-calendar4"></i>
-                                    <small class="ms-2">2022/11/03</small>
+                    <div class="col-lg-6">
+                        <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
+                            <div class="col-sm-6 pe-sm-3">
+                                <div class="ratio ratio-16x9 h-100">
+                                    <img src="./images/blog-3.png" class="img-fluid rounded-1 object-fit-cover"
+                                        alt="blog image">
                                 </div>
-                                <small>09:14</small>
+                            </div>
+                            <div class="col-sm-6 d-flex flex-column justify-content-between mt-3 mt-sm-0">
+                                <h5 class="fw-bold mb-0 line-clamp-1">The best way to treat arthritis</h5>
+                                <p class="mb-0 line-clamp-3">
+                                    Knee arthritis is a common complication that can happen at any age; But its
+                                    prevalence...
+                                </p>
+                                <div
+                                    class="pt-2 mt-2 border-top d-flex align-items-center justify-content-between text-muted">
+                                    <div class="d-flex align-items-start">
+                                        <i class="bi bi-calendar4"></i>
+                                        <small class="ms-2">2022/11/03</small>
+                                    </div>
+                                    <small>09:14</small>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
-                        <div class="col-sm-6 pe-sm-3">
-                            <div class="ratio ratio-16x9 h-100">
-                                <img src="./images/blog-4.png" class="img-fluid rounded-1 object-fit-cover"
-                                    alt="blog image">
-                            </div>
-                        </div>
-                        <div class="col-sm-6 d-flex flex-column justify-content-between mt-3 mt-sm-0">
-                            <h5 class="fw-bold mb-0 line-clamp-1">Kidney stone diet</h5>
-                            <p class="mb-0 line-clamp-3">
-                                Kidney stone diet plays an important role in its occurrence and prevention. Especially
-                                if you...
-                            </p>
-                            <div
-                                class="pt-2 mt-2 border-top d-flex align-items-center justify-content-between text-muted">
-                                <div class="d-flex align-items-start">
-                                    <i class="bi bi-calendar4"></i>
-                                    <small class="ms-2">2022/04/16</small>
+                    <div class="col-lg-6">
+                        <div class="card-hover row g-0 rounded-3 p-3 bg-white text-capitalize">
+                            <div class="col-sm-6 pe-sm-3">
+                                <div class="ratio ratio-16x9 h-100">
+                                    <img src="./images/blog-4.png" class="img-fluid rounded-1 object-fit-cover"
+                                        alt="blog image">
                                 </div>
-                                <small>08:30</small>
+                            </div>
+                            <div class="col-sm-6 d-flex flex-column justify-content-between mt-3 mt-sm-0">
+                                <h5 class="fw-bold mb-0 line-clamp-1">Kidney stone diet</h5>
+                                <p class="mb-0 line-clamp-3">
+                                    Kidney stone diet plays an important role in its occurrence and prevention.
+                                    Especially
+                                    if you...
+                                </p>
+                                <div
+                                    class="pt-2 mt-2 border-top d-flex align-items-center justify-content-between text-muted">
+                                    <div class="d-flex align-items-start">
+                                        <i class="bi bi-calendar4"></i>
+                                        <small class="ms-2">2022/04/16</small>
+                                    </div>
+                                    <small>08:30</small>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </section>
-            <!-- End weblog -->
-            <!-- Start Email Subscription -->
+                </section>
+            </div>
+        </div>
+        <!-- End weblog -->
+        <!-- Start Email Subscription -->
+        <section class="container">
             <section class="subscription">
                 <div class="email-subscription">
                     <h5 class="fw-bold text-center text-capitalize mb-4">Enter your email address and receive our latest
@@ -561,8 +571,8 @@
                     </div>
                 </div>
             </section>
-            <!-- End Email Subscription -->
         </section>
+        <!-- End Email Subscription -->
     </main>
     <footer>
         <div class="copyright py-3">
