--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- Start Header -->
     <header>
         <nav class="navbar navbar-expand-lg bg-transparent">
             <section class="container">
@@ -61,6 +62,8 @@
             </section>
         </nav>
     </header>
+    <!-- End Header -->
+    <!-- Start Main -->
     <main>
         <!-- Start Available treatments -->
         <section class="container">
@@ -574,6 +577,8 @@
         </section>
         <!-- End Email Subscription -->
     </main>
+    <!-- End Main -->
+    <!-- Start Footer -->
     <footer>
         <div class="copyright py-3">
             <section class="container">
@@ -606,6 +611,7 @@
             </section>
         </div>
     </footer>
+    <!-- End Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
     </script>
