--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <a class="nav-link" href="#">Work with us</a>
                         </li>
                         <li class="nav-item mx-2 dropdown">
-                            <a class="nav-link dropdown-toggle py-1" href="#" role="button" data-bs-toggle="dropdown"
+                            <a class="nav-link dropdown-toggle py-1 px-2" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 En
                             </a>
