--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <body>
     <!-- Start Header -->
-    <header class="position-relative">
-        <nav class="navbar navbar-expand-lg bg-transparent">
+    <header>
+        <nav class="navbar navbar-expand-lg">
             <section class="container">
                 <a class="navbar-brand me-0 d-inline-flex align-items-center" href="./index.html">
                     <img class="object-fit-contain" width="40" height="30" src="./images/logo.png" alt="logo image">
@@ -69,7 +69,27 @@
     <!-- End Header -->
     <!-- Start Main -->
     <main>
-        <div class="intro"></div>
+        <div class="intro">
+            <img class="airplane" src="./images/airplane.png" alt="airplane image">
+            <div class="container position-relative">
+                <div class="col-md-6">
+                    <img class="object-fit-contain" width="187" height="140" src="./images/logo.png" alt="logo image">
+                    <h1 class="text-uppercase mb-0">infinity tech</h1>
+                    <p class="mb-1">
+                        Infinity Tech is the largest health tourism platform in the Middle East, hosting the highest
+                        quality medical and tourism services.
+                    </p>
+                    <div>
+                        <button type="button" class="btn btn-primary py-3 px-5 fw-semibold me-3">Get Started</button>
+                        <button type="button"
+                            class="btn btn-link py-3 px-5 fw-semibold text-decoration-none text-white">
+                            <span>Contact Us</span>
+                            <i class="bi bi-chevron-right ms-2"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Start Intro -->
         <section class="container">
             <div class="intro-inner">
